# BowlingScoringApp

./: README.md  bowling_game.py  bowling_scoring_app.py  environment.yml  pytest.ini  python-package-conda.yml  setup.cfg
.github/workflows/: python-package-conda.yml
src/: bowling_frame.py  bowling_game.py
tests/: pytest_base.py  test_bowling_frame.py  test_bowling_game.py  test_score_bowling_game.py
