[metadata]
name = bowling-scoring-app
version = 0.0.1
author = Levi Conall
author_email = Levi.Conall@gmail.com
description = A submission to a coding challenge to build a bowling scoring app.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lconall/BowlingScoringApplication
project_urls =
    Bug Tracker = https://github.com/lconall/BowlingScoringApplication/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[pycodestyle]
max-line-length = 220
